[metadata]
name=bcf-client
version=0.0.1
author = Ifcopenshell
description = A simple Python implementation of BCF
url = https://github.com/IfcOpenShell/IfcOpenShell
project_urls =
    Code=https://github.com/IfcOpenShell/IfcOpenShell
    Issues=https://github.com/IfcOpenShell/IfcOpenShell/issues
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    Python
    file formats
    engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires=
    xmlschema
include_package_data = True

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = E24, E121, E123, E126, E203, E226, E704, E741, W503, W504
