[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsdd"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = ["building smart data dictionaries"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests"]

[project.urls]
Documentation = "https://github.com/IfcOpenShell/src/bsdd#readme"
Issues = "https://github.com/IfcOpenShell/issues"
Source = "https://github.com/IfcOpenShell/src/bsdd"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]


[tool.pytest.ini_options]
pythonpath = [".", "src"]